update ExceptionsDemo